--- a/src/hybrid/html/graph.html
+++ b/src/hybrid/html/graph.html
@@ -20,6 +20,10 @@
 <script src="echarts.js"></script>
 <div id="ec"></div>
 <script>
+    /**
+     * 图标页面，监听父组件传递的数据
+     * @see TheUserDataGraph
+     * */
     let chart = null
     window.addEventListener('message', e => {
         if (!chart) chart = echarts.init(document.getElementById('ec'));
