--- a/src/template.h5.html
+++ b/src/template.h5.html
@@ -10,6 +10,16 @@
     <title>
         <%= htmlWebpackPlugin.options.title %>
     </title>
+    <script type="module">
+      import { INDEX_URL, POLICY_VERSION, VERSION } from '/const.js'
+
+      window['getVersion'] = () => VERSION
+        console.log(getVersion())
+        const Android = window.Android
+        if (Android && Android.getPolicy() !== POLICY_VERSION) {
+            window.location.href = INDEX_URL + '/policy'
+        }
+    </script>
     <!-- 正式发布的时候使用，开发期间不启用。↓ -->
     <!-- <script src="/h5/touch-emulator.js"></script>
 <script>
