--- a/packages/lightwindow_main/index.html
+++ b/packages/lightwindow_main/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" href="/images/logo.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="keywords" content="窗隙流光,悬浮窗">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0" />
+  <meta name="keywords" content="窗隙流光">
   <meta name="description" content="窗隙流光，轻量快捷的悬浮窗应用">
   <title>窗隙流光-悬浮窗应用</title>
   <script>
