--- a/packages/lightwindow_calendar/src/template.h5.html
+++ b/packages/lightwindow_calendar/src/template.h5.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>static/logo.svg">
+    <link rel="icon" href="/images/logo.svg">
 
     <title>
         <%= htmlWebpackPlugin.options.title %>
     </title>
-    <script type="module">
-
+    <script src="/const.js"></script>
+    <script>
       window['getVersion'] = () => VERSION
         console.log(getVersion())
         const Android = window.Android
