--- a/packages/lightwindow_main/index.html
+++ b/packages/lightwindow_main/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="zh">
-
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" href="/images/logo.svg" />
@@ -17,33 +16,22 @@
       j.src = 'https://d.alicdn.com/alilog/mlog/aplus/' + i + '.js';
       f.parentNode.insertBefore(j, f);
     })(window, document, 'script', 'aplus_queue', '203467608');
-
-    //集成应用的appKey
     aplus_queue.push({
       action: 'aplus.setMetaInfo',
       arguments: ['appKey', '615d5c5fac9567566e8a7fb6']
     });
-    /************************以下内容为可选配置内容****************************/
-    //sdk提供手动pv发送机制，启用手动pv(即关闭自动pv)，需设置aplus-waiting=MAN;
-    //注意：由于单页面路由改变时不会刷新页面，无法自动发送pv，所以对于单页应用，强烈建议您关闭自动PV, 手动控制PV事件
     aplus_queue.push({
       action: 'aplus.setMetaInfo',
       arguments: ['aplus-waiting', 'MAN']
     });
-    //是否开启调试模式
     aplus_queue.push({
       action: 'aplus.setMetaInfo',
       arguments: ['DEBUG', false]
     });
-    //是否指定用作计算umid的id类型，默认为cnaid，目前支持:
-    //1. 微信和QQ: openid; 字节和百度 anonymousid; 支付宝 alipay_id
-    //2. 微信、QQ、字节、百度平台的 unionid
-    //3. 业务方自己生成的随机id uuid
     aplus_queue.push({
       action: 'aplus.setMetaInfo',
-      arguments: ['aplus-idtype', 'cnaid'] //取值参考见附表1
+      arguments: ['aplus-idtype', 'cnaid']
     });
-      /******************************************************************/
   </script>
   <script src="/const.js"></script>
   <script>
@@ -54,11 +42,46 @@
 
 <noscript>
   <strong>We're sorry but this doesn't work properly without JavaScript enabled.
-      Please enable it to continue.</strong>
+    Please enable it to continue.</strong>
 </noscript>
 
 <body>
-  <div id="app"></div>
+  <div id="app">
+    <div id="__loading"
+      style="left: 0;right: 0;top: 0;bottom: 0; 
+      position: absolute; width: 60px;height: 60px;margin: auto;
+      display: flex;justify-content: center;align-items: center;"
+      >
+      <img class="anim" src="/images/loading.svg" />
+    </div>
+    <script>
+      document.getElementById('__loading').onclick = () => {
+        if (window.AndroidBase) window.AndroidBase.clearPageCache()
+        if (window.Android) window.Android.close()
+        else console.log('android only');
+      }
+    </script>
+    <style>
+      .anim {
+        animation-name: animRotate;
+        animation-iteration-count: infinite;
+        animation-duration: 2.5s;
+        animation-timing-function: linear;
+      }
+
+      @keyframes animRotate {
+        0% {
+          transform: rotate(30deg);
+        }
+        50% {
+          transform: rotate(210deg);
+        }
+        100% {
+          transform: rotate(390deg);
+        }
+      }
+    </style>
+  </div>
   <script type="module" src="/src/main.ts"></script>
 </body>
 
