--- a/packages/lightwindow_calendar/src/template.h5.html
+++ b/packages/lightwindow_calendar/src/template.h5.html
@@ -26,17 +26,22 @@
     <strong>Please enable JavaScript to continue.</strong>
 </noscript>
 <div id="app">
-    <div id="__loading" style="left: 0;right: 0;top: 0;bottom: 0; 
-    position: absolute; width: 60px;height: 60px;margin: auto;
-    display: flex;justify-content: center;align-items: center;">
-        <img class="anim" src="/images/loading.svg" />
+    <div id="__LOAD__" style="left: 0;right: 0;top: 0;bottom: 0; 
+      position: absolute; width: 150px;height: 150px;margin: auto;
+      display: flex;flex-direction: column; justify-content: center;align-items: center;">
+      <img class="anim" src="/images/loading.svg" />
+      <div id="__TIP__" style="display: none;">加载异常，点击重试</div>
     </div>
     <script>
-        document.getElementById('__loading').onclick = () => {
-            if (window.AndroidBase) window.AndroidBase.clearPageCache()
-            if (window.Android) window.Android.close()
-            else console.log('android only');
+      setTimeout(() => {
+        document.getElementById('__LOAD__').onclick = () => {
+          if (window.AndroidBase) window.AndroidBase.clearPageCache()
+          if (window.Android) window.Android.close()
+          else console.log('android only');
         }
+        document.getElementById("__TIP__").style = null
+      }, 2000)
+
     </script>
     <style>
         .anim {
