--- a/packages/lightwindow_main/effect/index.html
+++ b/packages/lightwindow_main/effect/index.html
@@ -8,6 +8,9 @@
   <meta name="keywords" content="窗隙流光">
   <meta name="description" content="窗隙流光，轻量快捷的悬浮窗应用">
   <title>窗隙流光-悬浮窗应用</title>
+  <style>
+    html, body{margin: 0;padding: 0;width: 100%;height: 100%;background: transparent;}
+  </style>
 </head>
 
 <noscript>
